# mlops_1

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.inference  Dockerfile.mlflow  Dockerfile.streamlit  Dockerfile.train  Dockerfile.ui  README.md  api.py  buildspec.yml  cb_log_200.json  config.py  docker-compose.yml  dockerfile  eda.py  evaluate.py  lasso_model.joblib  main.py  mlflow.db  pyproject.toml  requirements.train.txt  requirements.txt  stack.yml  streamUI.py  train_lasso.py
.gitignore/: mlflow.db
api/: api.py  app_streamlit.py
artifacts/: model.h5  model.joblib  model.keras  top_feature_importance.csv
aws/: postgres.py
buildspecs/: buildspecs.api.yml  buildspecs.streamlit.yml
deployment/: Dockerfile.api  app.py
mlruns/138593766727934668/: meta.yaml
mlruns/512650723412607979/: meta.yaml
mlruns/605613274171143502/: meta.yaml
models/: student_performance_sgd.joblib
src/: .gitignore  Dockerfile.api  Dockerfile.app_streamlit  Dockerfile.requirements  agent.py  api.py  app_streamlit.py  buildspec-vidya.yml  config.py  data_loader.py  evaluate.py  export_model.py  llm_service.py  main.py  model.py  predict.py  preprocessing.py  register_best_model.py  streamUI.py  streamlit_llm_app.py  train.py  train_lasso.py  train_rf_mlflow.py
src/api/: app.py
src/dashboard/: app.py
src/utils/: get_latest_model_version.py  set_alias.py
tests/: preprocessing.py  streamlit_validate.py  test_preprocessing.py  test_streamlit_validate.py
utils/: entrypoint.sh
vidyashree/: evaluate.py  requirements.txt  test_data.joblib
(+82 files in other folders)
