[project]
name = "student-performance-NN"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.42.21",
    "fastapi>=0.128.0",
    "mlflow>=3.8.1",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
    "streamlit>=1.52.2",
    "tensorflow>=2.15.0",
    "uvicorn>=0.40.0",
]
