[project]
name = "mlops-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.30",
    "dotenv>=0.9.9",
    "joblib>=1.5.3",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.45",
]
